# rust_embedded

./: Cargo.toml  Dockerfile  README.md
.cargo/: config
src/: main.rs
